--- a/workbench/reports/assets/thumbs.css
+++ b/workbench/reports/assets/thumbs.css
@@ -21,7 +21,7 @@
 	opacity:0.60;
 }
 .thumb-zoom {
-	background:url(images/search.png) no-repeat;
+	background:url(search.png) no-repeat;
 	position:absolute; width:22px; height:22px;
 	right:10px; bottom:7px;
 }
