--- a/workbench/reports/assets/totori.css
+++ b/workbench/reports/assets/totori.css
@@ -1,6 +1,6 @@
 /**
- * EPBT - SAP Enterprise Portal Behavior Testing
- * http://github.com/arnaud/EPBT  -  MIT License
+ * Totori - User Acceptance Testing Workbench
+ * http://github.com/arnaud/totori - MIT License
  *
  * Original file from <http://github.com/raldred/cucumber_textmate/blob/master/cucumber-textmate.css>
  */
