GitHub account relocation & removal of reports examples

--- a/assets/reports/assets/totori.css
+++ b/assets/reports/assets/totori.css
@@ -1,6 +1,6 @@
 /**
  * Totori - User Acceptance Testing Workbench
- * http://github.com/arnaud/totori - MIT License
+ * http://github.com/totori/totori - MIT License
  *
  * Original file from <http://github.com/raldred/cucumber_textmate/blob/master/cucumber-textmate.css>
  */
